--- a/index.html
+++ b/index.html
@@ -35,17 +35,20 @@
      </p> 
         <a href="#" class="let-connect" style="font-family: 'Poppins', serif;">LET'S CONNECT </a>
         <br>
-      <div class="icons-social">
-        <a class="icon icon-twitter" href="Twitter">
-          <img src="/images/Twitter.png" alt="Twitter icon"></a>
-        <a class="icon icon-linkedin" href="Linkedin"> 
-          <img src="/images/Linkedin.png" alt="Linkedin icon"></a> 
-        <a class="icon icon-medium" href="Messenger"> <img src="/images/Vector4.png" alt="Message icon"/></a>
-        <a class="icon icon-github" href="Github"> <img src="/images/Github.png" alt="Github icon"/><a>
-        <a class="icon icon-iOS" href=""> <img src="/images/iOS.png" alt="iOS icon"></a>
-      </div>
+      <ul class="icons-social">
+        <li>
+        <a class="icon icon-twitter" href="Twitter"><img src="/images/Twitter.png" alt="Twitter icon"></a></li>
+        <li>
+        <a class="icon icon-linkedin" href="Linkedin"><img src="/images/Linkedin.png" alt="Linkedin icon"></a></li>
+        <li>
+        <a class="icon icon-medium" href="Messenger"><img src="/images/Vector4.png" alt="Message icon"/></a></li>
+        <li>
+        <a class="icon icon-github" href="Github"><img src="/images/Github.png" alt="Github icon"/><a></li>
+        <li>
+        <a class="icon icon-iOS" href=""> <img src="/images/iOS.png" alt="iOS icon"></a></li>
+      </ul>
     </section>
-    </headline>
+  </headline>
   </div>   
 </body>
 </html>
